syntax = "proto3";

package helloworld;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "some_parameter.proto";

option java_package = "com.salesforce.jprotoc";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}

    // Sends the current time
    rpc SayTime (google.protobuf.Empty) returns (TimeResponse) {option deprecated=true;}

    rpc SomeParam (my.someparameters.SomeParameter) returns (my.someparameters.SomeParameter) {}
    
    rpc FireAndForget (my.someparameters.SomeParameter) returns (google.protobuf.Empty) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
    my.someparameters.SomeParameter sp = 2;
}

// The response message containing the greetings
message HelloResponse {
    string message = 1;
}

// The response message containing the time
message TimeResponse {
    google.protobuf.Timestamp time = 1;
}
